tradition section in about accordion completed

--- a/public/about.html
+++ b/public/about.html
@@ -191,8 +191,7 @@
                     <div class="card-body">
 
                       <a href="http://www.westernslopenow.com/news/scholastica-creates-new-ways-to-learn/276175025" target="_blank"><img src="assets/news.png" class="card-img-top img-fluid pb-3"></a><br>
-                      Scholastica Creates New Ways to Learn
-                      Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. .
+                      A local news station covered a tournament with the title <a href="http://www.westernslopenow.com/news/scholastica-creates-new-ways-to-learn/276175025" target="_blank"><strong class="font-italic">Scholastica Creates New Ways to Learn</strong></a>. This may have been our 2nd district wide Scholastica Tournament out of the 4 or 5 I facilitated.  D51 is still hosting the event.  After every tournament I looked forward to incorporating feedback from competitors, parents, colleagues who helped make the event a success, & youth who were starting to sign up for a leadership opportunity to help run it.  I took notes on all the feedback and was able to introduce new aspects to the event each time round.  For example, the game competition bracket seemed to always need tweaks after each tournament.  Also, we adjusted the tournament schedule to include time for non-competitive game play so that youth would have the opportunity to get to know peers from other schools in the community in a non-competitive setting.
                     </div>
                   </div>
               </div>  <!-- end card -->
@@ -209,7 +208,7 @@
                   <div id="trad" class="collapse" aria-labelledby="headingFive" data-parent="#accordion">
                     <div class="card-body">
                       <iframe width="560" height="415" src="https://www.youtube.com/embed/ppEiDHYWFYk" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen class="img-fluid"></iframe>
-                      Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. .
+                      This video covers the last Scholastica Tournament I facilitated.  I hosted two tournaments that year.  Some great improvements included: 1) building the youth leadership team which would help facilitate the event & prepare by hosting a training event prior to each tournament, 2) youth leading "Options" game time after competitive gameplay for interactive fun, 3) having a theme for adult & youth leadership which united us in a fun way & also gave a visual cue to competitors about who to ask for fun, 4) incorporating new games each time, 5) tweaking the game bracket each time, 6) building an Excel spreadsheet (w/the help of my husband) which would execute the calculations for individual & school winners, 7) inviting participation from the local toy store owner to be involved in a variety of ways (& she was involved w/such a dedicated, generous, & servant-minded spirit!!), 8) inviting students from my school to help w/the clean up after the tournament w/a challenge to finish w/enough time to have an after tournament game together.. which led to the <strong>Epic Rubber Band War</strong> (rules created & voted on by participants)... and I'm sure there's more which created a sense of tradition & tribe surrounding the event.. but those are what stick out in my mind!
                     </div>
                   </div>
               </div>  <!-- end card -->
@@ -223,8 +222,8 @@
             <div class="row mt-3">
               <div class="col">
                 <span class="h3">Our story...</span>
-                <p>It all began here and then this and that happened. It all began here and then this and that happened. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-                <p>It all began here and then this and that happened. It all began here and then this and that happened.</p>
+                <p>It is amazing.. what can happen in a handful of years with a team of dedicated people who want to be innovative about making life and learning experiences meaningful! </p>
+                <p>NOW THIS SECTION NEEDS TO TELL HOW I GOT FROM SCHOLASTICA TOURNAMENT FACILITATOR & TEACHER TO FULL STACK DEVELOPER</p>
               </div>
             </div>
 
