--- a/public/hilo.html
+++ b/public/hilo.html
@@ -333,8 +333,7 @@
             $(e.currentTarget).css('display', 'none');
             $('#highLow').css('display','inline-flex');
             })
-
-            console.log('count: '+count+' score: '+score+' lives: '+lives);
+            // console.log('count: '+count+' score: '+score+' lives: '+lives);
             buildCards();
             shuffleArray(cards);
             cardOutput.innerHTML +=showCard();
