about page content now complete

--- a/public/about.html
+++ b/public/about.html
@@ -108,7 +108,7 @@
         <div class="h1 d-inline-block text-truncate" style="max-width: 375px;"><span class="badge badge-warning text-primary">How I Came to this Fork in the Road</span></div>
         <hr class="my-3">
         <!-- rounded badge: -->
-            <h3 class="lead pb-3"><span class="badge badge-pill pt-2 pb-2" style="background-color:#052F5F">The path</span> to becoming a full stack developer was an unexpected journey.</ph3>
+            <h3 class="lead pb-3" style="color:#052F5F"><span class="badge badge-pill pt-2 pb-2" style="background-color:#052F5F">The path</span> to becoming a full stack developer was an unexpected journey.</ph3>
 
         <hr class="my-1 pt-3">
 
@@ -122,9 +122,9 @@
           <div class="row">
 
             <div id="accordion" class="col-md-5">
-              <h5 id="fontK" style="color:#052F5F">Some background on how my love for game-based learning led me here:</h5>
+              <h5 style="color:#052F5F">Some background on how my love for game-based learning led me here:</h5>
 
-              <div class="card">
+              <div class="card" style="color:#052F5F">
                   <div class="card-header bg-primary" id="headingOne">
                     <h5 class="mb-0 text-center">
                       <button class="btn btn-link collapsed" data-toggle="collapse" data-target="#set" aria-expanded="false" aria-controls="set">
@@ -141,7 +141,7 @@
                   </div>
               </div>  <!-- end card -->
 
-              <div class="card">
+              <div class="card" style="color:#052F5F">
                   <div class="card-header bg-info" id="headingThree">
                     <h5 class="mb-0 text-center">
                       <button class="btn btn-link collapsed" data-toggle="collapse" data-target="#schol" aria-expanded="false" aria-controls="schol">
@@ -159,7 +159,7 @@
                   </div>
               </div>  <!-- end card -->
 
-              <div class="card">
+              <div class="card" style="color:#052F5F">
                   <div class="card-header bg-warning" id="headingTwo">
                     <h5 class="mb-0 text-center">
                       <button class="btn btn-link collapsed" data-toggle="collapse" data-target="#nails" aria-expanded="false" aria-controls="nails">
@@ -178,7 +178,7 @@
 
 
 
-              <div class="card">
+              <div class="card" style="color:#052F5F">
                   <div class="card-header bg-danger" id="headingFour">
                     <h5 class="mb-0 text-center" style="color:#052F5F">
                       <button class="btn btn-link collapsed" data-toggle="collapse" data-target="#news" aria-expanded="false" aria-controls="news">
@@ -196,7 +196,7 @@
                   </div>
               </div>  <!-- end card -->
 
-              <div class="card">
+              <div class="card" style="color:#052F5F">
                   <div class="card-header bg-success" id="headingFive">
                     <h5 class="mb-0 text-center" style="color:#052F5F">
                       <button class="btn btn-link collapsed" data-toggle="collapse" data-target="#trad" aria-expanded="false" aria-controls="trad">
@@ -219,11 +219,12 @@
               <img src="assets/pirate.png" class="img-fluid" alt="">
             </div>
 
-            <div class="row mt-3">
+            <div class="row mt-3" style="color:#052F5F">
               <div class="col">
-                <span class="h3">Our story...</span>
+                <span class="h3">My story...</span>
                 <p>It is amazing.. what can happen in a handful of years with a team of dedicated people who want to be innovative about making life and learning experiences meaningful! </p>
-                <p>NOW THIS SECTION NEEDS TO TELL HOW I GOT FROM SCHOLASTICA TOURNAMENT FACILITATOR & TEACHER TO FULL STACK DEVELOPER</p>
+                <p>After presenting at several conferences about Scholastica Tournaments, people were reaching out to me to learn more about how to tournaments in their own schools.  I thought it would be best to create a website to direct people to as a more efficient way to collaborate as compared to email correspondence.  I took a class one of the local colleges to learn how to build Wordpress sites better.  My teacher referenced the purpose of my site as a small business, and that got me thinking... </p>
+                <p>Since then I decided to invest in a 14 week General Assembly web development immersive bootcamp to learn more about how to build sites using a variety of coding languages and technologies.  I fell in love with the process of building tools that address life processes with efficiency.  I've been continuing to build my skills since then!</p>
               </div>
             </div>
 
