hr & caption for game pics on about page

--- a/public/about.html
+++ b/public/about.html
@@ -227,9 +227,10 @@
                 <p>Since then I decided to invest in a 14 week General Assembly web development immersive bootcamp to learn more about how to build sites using a variety of coding languages and technologies.  I fell in love with the process of building tools that address life processes with efficiency.  I've been continuing to build my skills since then!</p>
               </div>
             </div>
-
-          </div>
+          </div> <!-- end row -->
 <!-- mb-3 = margin-bottom (can do mt ml mr) -->
+<hr class="my-5">
+<h5 style="color:#052F5F">A few of the games that we used in the competitive portion of the Scholastica Tournaments:</h5>
           <div class="row mb-5">
             <div class="col-md-3"><img src="assets/block.JPG" class="img-fluid shadow-lg" alt=""><p class="bg-danger text-white text-center pt-2 pb-2">Block by Block</p></div>
 
