--- a/public/workit.html
+++ b/public/workit.html
@@ -97,7 +97,7 @@
             <div class="card">
               <a href="#"><img src="assets/flab.png" class="card-img-top img-fluid"></a>
             <h4 class="card-title text-center pt-3">FLAB</h4>
-            <p class="card-text pr-2 pl-2 pb-2">This is a blog for college football enthusiasts who also like craft beer.  Merritt Schumann II is the founding father of this group and has used his ingenious Excel skills over the years to organize his own approach to a fantasy football league where winners are awarded.... you guessed it... their choice of beer.  Yes; he usually wins.  I plead the 5th regarding how much I help him enjoy the spoils.</p>
+            <p class="card-text pr-2 pl-2 pb-2">FLAB is a full-stack, six model, sessions based app built with MVC file organization.  It utilizes the breweryDB API.  The Bootstrap 4 framework is incorporated. This is an app for college football enthusiasts who also like craft beer.  Merritt Schumann II is the founding father of this group and has used his ingenious Excel skills over the years to organize his own approach to a fantasy football league where winners are awarded.... you guessed it... their choice of beer.  Yes; he usually wins.  I plead the 5th regarding how much I help him enjoy the spoils.</p>
             </div>
           </div>
 
