--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <!--Favicon -->
-     <link href="assets/favicon.ico" rel="icon" type="image/png" >
+     <link rel="icon" sizes="16x16 24x24 32x32 48x48 64x64" href="assets/favicon.ico">
+    <link rel="apple-touch-icon" sizes="57x57" href="assets/favicon.ico">
 
      <!-- Google Fonts -->
      <link href="https://fonts.googleapis.com/css?family=Kalam" rel="stylesheet">
