--- a/public/about.html
+++ b/public/about.html
@@ -216,7 +216,7 @@
             </div>  <!-- end accordion -->
 
             <div class="col-md-7">
-              <img src="assets/pirate.png" class="img-fluid" alt="">
+              <img src="assets/mic.png" class="img-fluid" alt="">
             </div>
 
             <div class="row mt-3" style="color:#052F5F">
