--- a/public/about.html
+++ b/public/about.html
@@ -219,7 +219,7 @@
               <img src="assets/mic.png" class="img-fluid" alt="">
             </div>
 
-            <div class="row mt-3" style="color:#052F5F">
+            <div class="row mt-3 pr-2 pl-2" style="color:#052F5F">
               <div class="col">
                 <span class="h3">My story...</span>
                 <p>It is amazing.. what can happen in a handful of years with a team of dedicated people who want to be innovative about making life and learning experiences meaningful! </p>
