about page content edits

--- a/public/about.html
+++ b/public/about.html
@@ -223,7 +223,7 @@
               <div class="col">
                 <span class="h3">My story...</span>
                 <p>It is amazing.. what can happen in a handful of years with a team of dedicated people who want to be innovative about making life and learning experiences meaningful! </p>
-                <p>After presenting at several conferences about Scholastica Tournaments, people were reaching out to me to learn more about how to tournaments in their own schools.  I thought it would be best to create a website to direct people to as a more efficient way to collaborate as compared to email correspondence.  I took a class one of the local colleges to learn how to build Wordpress sites better.  My teacher referenced the purpose of my site as a small business, and that got me thinking... </p>
+                <p>After presenting at several conferences about Scholastica Tournaments, people were reaching out to me to learn more about how to host tournaments in their own schools.  I thought it would be best to create a website to direct people to as a more efficient way to collaborate as compared to email correspondence.  I took a class one of the local colleges to learn how to build Wordpress sites better.  My teacher referenced the purpose of my site as a small business, and that got me thinking... </p>
                 <p>Since then I decided to invest in a 14 week General Assembly web development immersive bootcamp to learn more about how to build sites using a variety of coding languages and technologies.  I fell in love with the process of building tools that address life processes with efficiency.  I've been continuing to build my skills since then!</p>
               </div>
             </div>
